vault/vault-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
    - host: vault.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-service-ui
                port:
                  number: 8200
